--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,4 @@
-
-*.class
-
-*.log
-
-*.ctxt
-
-.mtj.tmp/
-
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+target
+.idea
 *.iml
-
-.idea/
-target/
-
-hs_err_pid*
 
